deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acm-policy-helper
  labels:
    app.kubernetes.io/name: acm-policy-helper
