deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acm-policy-helper
  namespace: acm-policy-helper
  labels:
    app.kubernetes.io/name: acm-policy-helper
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: acm-policy-helper-tls
spec:
  ports:
    - name: https
      port: 8443
      targetPort: https
      protocol: TCP
  selector:
    app.kubernetes.io/name: acm-policy-helper
  type: ClusterIP
