deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acm-policy-helper
  namespace: acm-policy-helper
  labels:
    app.kubernetes.io/name: acm-policy-helper
spec:
  to:
    kind: Service
    name: acm-policy-helper
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
